--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
       Welcome to Stickercity
     </h1>
     <div>
+      <img src="IMG_0479.jpeg" width=500>
+      <img src="IMG_0533.webp" width=500>
+      <img src="IMG_0537.jpeg" width=500>
+      <img src="IMG_0551.jpeg" width=500>
+      <img src="IMG_0553.jpeg" width=500>
+      <img src="IMG_0595.webp" width=500>
+      <img src="IMG_0599.gif" width=500>
+      <img src="IMG_0601.jpeg" width=500>
+      <img src="IMG_0648.webp" width=500>
+      <img src="IMG_0652.webp" width=500>
+      <img src="IMG_0654.gif" width=500>
+      <img src="IMG_0655.webp" width=500>
+      <img src="IMG_0657.webp" width=500>
+      <img src="misty_Original.jpeg" width=500>
     </div>
   </body>
 </html>
