--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <img src="IMG_0655.webp">
       <img src="IMG_0657.webp">
       <img src="misty_Original.jpeg">
+      <img src="IMG-20241230-WA0006_Original.jpeg">
+      <img src="STK-20240927-WA0022_Original.jpeg">
+      <img src="STK-20240927-WA0041_Original.jpeg">
+      <img src="STK-20241027-WA0007_Original.jpeg">
+      <img src="STK-20241221-WA0014_Original.jpeg">
+      <img src="STK-20241221-WA0029_Original.jpeg">
+      <img src="STK-20241230-WA0007_Original.jpeg">
+      <img src="STK-20241230-WA0008_Original.jpeg">
     </div>
   </body>
 </html>
