--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <h1>
       Welcome to Stickercity
     </h1>
+    <a href="https://github.com/dch82/stickercity">Submit a PR here</a>
     <div>
       <img src="IMG_0479.jpeg">
       <img src="IMG_0533.webp">
