--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <h1>
       Welcome to Stickercity
     </h1>
-    <a href="https://github.com/dch82/stickercity">Submit a PR here</a>
+    <a href="https://github.com/dch82/stickercity">
+      <img src="button.gif" alt="Submit PR!">
+    </a>
     <div>
       <img src="IMG_0479.jpeg">
       <img src="IMG_0533.webp">
