--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       Welcome to Stickercity
     </h1>
     <a href="https://github.com/dch82/stickercity">
-      <img src="button.gif" alt="Submit PR!">
+      <img src="button.png" alt="Submit PR!">
     </a>
     <div>
       <img src="IMG_0479.jpeg">
