--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      img {
+        image-rendering: pixelated;
+      }
+    </style>
+  </head>
   <body>
     <h1>
       Welcome to Stickercity
