--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      img {
-        image-rendering: pixelated;
-      }
-    </style>
-  </head>
   <body>
     <h1>
       Welcome to Stickercity
     </h1>
     <a href="https://github.com/dch82/stickercity">
-      <img src="button.png" alt="Submit PR!">
+      <img style="image-rendering: pixelated;" src="button.png" alt="Submit PR!">
     </a>
     <div>
       <img src="IMG_0479.jpeg">
