--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
       <img src="STK-20241221-WA0029_Original.jpeg">
       <img src="STK-20241230-WA0007_Original.jpeg">
       <img src="STK-20241230-WA0008_Original.jpeg">
+      <img src="STK-20241212-WA0004_Original.jpeg">
+      <img src="STK-20241225-WA0002_Original.jpeg">
+      <img src="STK-20241225-WA0007_Original.jpeg">
+      <img src="STK-20241230-WA0014_Original.jpeg">
+      <img src="STK-20241230-WA0015_Original.jpeg">
+      <img src="STK-20241230-WA0016_Original.jpeg">
+      <img src="STK-20241230-WA0017_Original.jpeg">
+      <img src="STK-20241230-WA0018_Original.jpeg">
+      <img src="STK-20241230-WA0019_Original.jpeg">
+      <img src="STK-20241230-WA0020_Original.jpeg">
+      <img src="STK-20241230-WA0022_Original.jpeg">
+      <img src="share_1580186042108319444_Original.png">
     </div>
   </body>
 </html>
