--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <img src="STK-20241230-WA0020_Original.jpeg">
       <img src="STK-20241230-WA0022_Original.jpeg">
       <img src="share_1580186042108319444_Original.png">
+      <img src="STK-20241222-WA0004_Original.jpeg">
+      <img src="STK-20241230-WA0023_Original.jpeg">
     </div>
   </body>
 </html>
